# signalforge

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  langgraph.json  package.json  pyproject.toml
backend/: __init__.py  __main__.py  capability_map_generator.py  db.py  pipeline.py  tracing.py
backend/agents/: chat_assistant.py  draft.py  hitl_gate.py  memory_agent.py  orchestrator.py  persona_generation.py  research.py  seller_intelligence.py  signal_ingestion.py  signal_qualification.py  solution_mapping.py  synthesis.py
backend/api/: app.py  session_store.py  websocket.py
backend/config/: __init__.py  capability_map.py  loader.py  seller_profile.py
backend/models/: enums.py  memory.py  state.py
backend/tools/: document_parser.py  jsearch.py  tavily.py  web_crawler.py
backend/utils/: date.py  langsmith_feedback.py
docs/: interview-prep-langchain.md  interview-talking-points.md  observability.md  python-fundamentals-walkthrough.md
frontend/: package-lock.json  package.json  vitest.config.ts
tests/: conftest.py  test_api.py  test_capability_map_generator.py  test_chat_assistant.py  test_config.py  test_document_parser.py  test_draft.py  test_e2e.py  test_extract_endpoints.py  test_hitl.py  test_integration.py  test_langsmith.py  test_langsmith_feedback.py  test_memory.py  test_models.py  test_orchestrator.py  test_persona_generation.py  test_pipeline_streaming.py  test_research.py  test_seller_intelligence.py  test_signal_ingestion.py  test_signal_qualification.py  test_solution_mapping.py  test_synthesis.py  test_web_crawler.py
(+96 files in other folders)
